frontend: fixed carousel spacing and header backround routing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -816,7 +816,7 @@ h1.likert-header {
       
   .gallery-cell {
     width: 28%;
-    height: 100vh;
+    height: 70vh;
     display: inline-block;
     margin-right: 10px;
     overflow: hidden;
@@ -828,7 +828,7 @@ h1.likert-header {
   .gallery-cell:before {
     display: block;
     text-align: center;
-    line-height: 200px;
+    line-height: 100px;
     font-size: 80vh;
     color: white;
   }
